--- a/ResturantManage/app/build.gradle
+++ b/ResturantManage/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -38,5 +39,7 @@ dependencies {
 
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
+
+    implementation'com.google.android.gms:play-services-vision:19.0.0'
 
 }
