--- a/ResturantManage/app/src/main/AndroidManifest.xml
+++ b/ResturantManage/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.resturantmanage">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tableDetail"
-            android:label="Table Details"
+        <activity android:name=".barcodeView"
+            android:label="Scan Vocuher"
             android:parentActivityName=".TableView"></activity>
+
+        <activity
+            android:name=".tableDetail"
+            android:label="Table Details"
+            android:parentActivityName=".TableView" />
         <activity
             android:name=".FoodDetail"
             android:label="Food Details" />
@@ -68,6 +78,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
 
 </manifest>
