--- a/ResturantManage/app/build.gradle
+++ b/ResturantManage/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
     implementation'com.google.android.gms:play-services-vision:19.0.0'
 
+    //implementation'com.android.support:appcompat-v7:28.0.0'
+
 }
