--- a/ResturantManage/app/src/main/AndroidManifest.xml
+++ b/ResturantManage/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
+        <receiver android:name=".ReminderBroadcast"/>
     </application>
 
 </manifest>
