--- a/ResturantManage/app/src/main/AndroidManifest.xml
+++ b/ResturantManage/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     package="com.example.resturantmanage">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -14,10 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".barcodeView"
+        <activity android:name=".AppInstructions"
+            android:label="App User Manual"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".barcodeView"
             android:label="Scan Vocuher"
-            android:parentActivityName=".TableView"></activity>
-
+            android:parentActivityName=".TableView" />
         <activity
             android:name=".tableDetail"
             android:label="Table Details"
@@ -78,10 +80,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
-        <receiver android:name=".ReminderBroadcast"/>
+
+        <receiver android:name=".ReminderBroadcast" />
     </application>
 
 </manifest>
